TMA-1528 - Fix cookie notification size on mobile and desktop

--- a/app/Resources/assets/sass/site/components/_cookie.scss
+++ b/app/Resources/assets/sass/site/components/_cookie.scss
@@ -10,24 +10,45 @@
 
   background-color: fade-out($c-bg3, .1);
   color: $c-t1;
-  font-size: 14px;
-  line-height: 1.2em;
 
-  .fleft {
-    width: 80%;
-    line-height: 40px;
-
+  p {
+    margin: 0;
+    font-size: 14px;
+    line-height: 1.3em;
+    text-align: center;
+  }
+  .fleft, .fright {
+    width: 100%;
+  }
+  .fright {
+    padding-top: 10px;
+  }
+  .inner {
+    max-width: 990px;
+    margin: 0 auto;
+  }
+  @media (min-width: 768px) {
+    padding: 10px 50px;
     p {
-      margin: 0;
+      text-align: left;
+    }
+    .fleft {
+      width: 70%;
+    }
+    .fright {
+      padding: 0;
+      width: 30%;
+      p {
+        text-align: right;
+      }
     }
   }
-
-  .fright {
-    width: 20%;
-    text-align: right;
-
-    p {
-      margin: 0;
+  @media (min-width: 1024px) {
+    .fleft {
+      width: 80%;
+    }
+    .fright {
+      width: 20%;
     }
   }
 }
